🙈  Added eclipse files to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+/bin/
 
 # Log file
 *.log
@@ -27,8 +28,9 @@ hs_err_pid*
 
 #mac files
 .DS_Store
-/bin/
+
 
 # Eclipse stuff
 .classpath
 .project
+/.settings/
